lesson_31/k8s/web/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: web
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
